--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,11 @@
 # build-backend = "flit_core.buildapi"
 
 [build-system]
-requires = ["setuptools>=61.0.0", "wheel"]
+requires = ["setuptools>=61.0.0", "wheel", "jinja2==3.0.3"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+py-modules = ['vcdisk']
 
 [project]
 name = "vcdisk"
@@ -21,6 +24,7 @@ classifiers = [
 dependencies = [
     "numpy",
     "scipy",
+    "jinja2==3.0.3",
 ]
 
 [project.urls]
